[tool.poetry]
name = "sim-mdp-gui"
version = "1.0.0"
description = "GUI tool to help human-vehicle interaction researchers design and conduct traffic experiments"
authors = ["umich_sim"]
license = "MIT"
readme = "README.md"
packages = [
   { include = "legacy/backend" },
   { include = "umich_sim"}
]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
carla = "0.9.13"
pygame = "^2.1.2"
simple-pid = "^1.0.1"
PyQt5 = "^5.15.7"
numpy = "^1.23.3"
configobj = "^5.0.6"
matplotlib = "^3.6.0"
control = "^0.9.2"
openpyxl = "^3.0.10"
msgpack-rpc-python = "^0.4.1"
hydra-core = "^1.2.0"
pathlib = "^1.0.1"
furo = "^2023.3.27"


[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
Sphinx = "^5.3.0"
sphinxcontrib-apidoc = "^0.3.0"
pylint = "^2.15.5"

[tool.poetry.group.linux.dependencies]
evdev = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
